--- a/app/globals.css
+++ b/app/globals.css
@@ -12,13 +12,13 @@
 @tailwind utilities;
 
 .text-gradient {
-    @apply bg-gradient bg-clip-text text-transparent;
-  }
-  
-  .text-gradient-dark {
-    @apply dark:bg-gradient-dark bg-clip-text text-transparent;
-  }
-  
+  @apply bg-gradient bg-clip-text text-transparent;
+}
+
+.text-gradient-dark {
+  @apply dark:bg-gradient-dark bg-clip-text text-transparent;
+}
+
 .dashed-horizontal-fade {
   background-image: repeating-linear-gradient(
     to right,
@@ -27,8 +27,20 @@
     transparent 3px,
     transparent 6px
   );
-  mask-image: linear-gradient(to right, transparent, white 10%, white 90%, transparent);
-  -webkit-mask-image: linear-gradient(to right, transparent, white 10%, white 90%, transparent);
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
   opacity: 0.3;
 }
 
@@ -40,8 +52,20 @@
     transparent 3px,
     transparent 6px
   );
-  mask-image: linear-gradient(to bottom, transparent, white 10%, white 90%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom, transparent, white 10%, white 90%, transparent);
+  mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
   opacity: 0.3;
 }
 .dashed-horizontal-fade-white {
@@ -52,8 +76,20 @@
     transparent 3px,
     transparent 6px
   );
-  mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.25) 10%, rgba(0, 0, 0, 0.25) 90%, transparent);
-  -webkit-mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.25) 10%, rgba(0, 0, 0, 0.25) 90%, transparent);
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    rgba(0, 0, 0, 0.25) 10%,
+    rgba(0, 0, 0, 0.25) 90%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    rgba(0, 0, 0, 0.25) 10%,
+    rgba(0, 0, 0, 0.25) 90%,
+    transparent
+  );
   opacity: 0.5;
 }
 
@@ -65,79 +101,88 @@
     transparent 3px,
     transparent 6px
   );
-  mask-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.25) 10%, rgba(0, 0, 0, 0.25) 90%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.25) 10%, rgba(0, 0, 0, 0.25) 90%, transparent);
+  mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    rgba(0, 0, 0, 0.25) 10%,
+    rgba(0, 0, 0, 0.25) 90%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    rgba(0, 0, 0, 0.25) 10%,
+    rgba(0, 0, 0, 0.25) 90%,
+    transparent
+  );
   opacity: 0.5;
 }
 
-
-
 @layer base {
   :root {
-        --background: 0 0% 100%;
-        --foreground: 0 0% 3.9%;
-        --card: 0 0% 100%;
-        --card-foreground: 0 0% 3.9%;
-        --popover: 0 0% 100%;
-        --popover-foreground: 0 0% 3.9%;
-        --primary: 0 0% 9%;
-        --primary-foreground: 0 0% 98%;
-        --secondary: 0 0% 96.1%;
-        --secondary-foreground: 0 0% 9%;
-        --muted: 0 0% 96.1%;
-        --muted-foreground: 0 0% 45.1%;
-        --accent: 0 0% 96.1%;
-        --accent-foreground: 0 0% 9%;
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 0 0% 89.8%;
-        --input: 0 0% 89.8%;
-        --ring: 0 0% 3.9%;
-        --chart-1: 12 76% 61%;
-        --chart-2: 173 58% 39%;
-        --chart-3: 197 37% 24%;
-        --chart-4: 43 74% 66%;
-        --chart-5: 27 87% 67%;
-        --radius: 0.5rem;
-    }
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+  }
   .dark {
-        --background: 0 0% 3.9%;
-        --foreground: 0 0% 98%;
-        --card: 0 0% 3.9%;
-        --card-foreground: 0 0% 98%;
-        --popover: 0 0% 3.9%;
-        --popover-foreground: 0 0% 98%;
-        --primary: 0 0% 98%;
-        --primary-foreground: 0 0% 9%;
-        --secondary: 0 0% 14.9%;
-        --secondary-foreground: 0 0% 98%;
-        --muted: 0 0% 14.9%;
-        --muted-foreground: 0 0% 63.9%;
-        --accent: 0 0% 14.9%;
-        --accent-foreground: 0 0% 98%;
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 0 0% 14.9%;
-        --input: 0 0% 14.9%;
-        --ring: 0 0% 83.1%;
-        --chart-1: 220 70% 50%;
-        --chart-2: 160 60% 45%;
-        --chart-3: 30 80% 55%;
-        --chart-4: 280 65% 60%;
-        --chart-5: 340 75% 55%;
-    }
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
 }
 
 :root {
   --anim--hover-time: 400ms;
   --anim--hover-ease: cubic-bezier(0.25, 1, 0.5, 1);
   --border-color: #dddddd;
-  --pattern-fg: rgba(119, 119, 119, 0.1); 
-
+  --pattern-fg: rgba(119, 119, 119, 0.1);
 }
 
 .dark {
-  --border-color: #36393d; 
+  --border-color: #36393d;
   --pattern-fg: rgba(138, 138, 138, 0.1);
 }
 
@@ -145,7 +190,8 @@
   border-color: var(--border-color);
 }
 
-body, html {
+body,
+html {
   overflow: auto !important;
 }
 
@@ -179,3 +225,47 @@ body, html {
   animation: marquee-vertical var(--duration) linear infinite;
 }
 
+pre {
+  background-color: transparent !important;
+}
+
+.token {
+  color: #717171 !important;
+  background-color: transparent !important;
+}
+
+span {
+  text-shadow: none !important;
+}
+
+.literal-property,
+.control-flow
+.function-variable  {
+  color: #ef8151 !important;
+}
+
+.control-flow
+
+.token.punctuation {
+  color: #787878 !important;
+}
+
+.syntax-highlighter-wrapper {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+.syntax-highlighter-wrapper pre {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  border-radius: 1rem;
+  font-size: 1rem;
+}
+
+
+.syntax-highlighter-wrapper pre {
+  white-space: pre-wrap;
+  word-break: break-all;
+}
